[package]
name = "browser"
version = "1.56.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sswahn/browser"
description = "This is a simple web browser written in Rust."

[dependencies]
futures = "0.3"
native-tls = "0.2"
gtk = "0.9.0"

[features]
# Define features if needed

[package.metadata.docs.rs]
documentation = "https://github.com/sswahn/browser/blob/main/README.md"
